--- a/CSS/SCSS/Components/_Header.scss
+++ b/CSS/SCSS/Components/_Header.scss
@@ -1,11 +1,12 @@
 header {
 
-    .container {
+    >.container {
 
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 12px 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
 
         .navbar {
 
