--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -4,3 +4,5 @@
 @import './Main/Utilities';
 
 @import './Components/Header';
+@import './Components/showcase';
+@import './Components/best-collection';
