--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -6,3 +6,4 @@
 @import './Components/Header';
 @import './Components/showcase';
 @import './Components/best-collection';
+@import './Components/sale-50';
