Top Selling section done

--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -7,3 +7,4 @@
 @import './Components/showcase';
 @import './Components/best-collection';
 @import './Components/sale-50';
+@import './Components/top-selling';
