--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -4,7 +4,10 @@
 @import './Main/Utilities';
 
 @import './Components/Header';
-@import './Components/showcase';
-@import './Components/best-collection';
-@import './Components/sale-50';
-@import './Components/top-selling';
+@import './Components/Showcase';
+@import './Components/Best-collection';
+@import './Components/Sale-50';
+@import './Components/Top-selling';
+@import './Components/Reviews';
+@import './Components/Newsletter';
+@import './Components/Footer';
