product-detail-images fixed

--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -11,3 +11,5 @@
 @import './Components/Reviews';
 @import './Components/Newsletter';
 @import './Components/Footer';
+@import './Components/Product-detail-image';
+@import './Components/Product-detail';
