--- a/CSS/SCSS/Style.scss
+++ b/CSS/SCSS/Style.scss
@@ -13,3 +13,4 @@
 @import './Components/Footer';
 @import './Components/Product-detail-image';
 @import './Components/Product-detail';
+@import './Components/Products';
